Issue IMCMS-665 W3c validation problems in text editor: - add scrollbar, fix button position

--- a/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
@@ -72,7 +72,8 @@
 }
 
 .image-exif-window .imcms-pop-up-modal__body {
-    height: 100%;
+    overflow-y: auto;
+	height: 100%;
     background-color: #f3f3fc;
 }
 
