--- a/src/main/webapp/imcms/css/imcms-text_editor.css
+++ b/src/main/webapp/imcms/css/imcms-text_editor.css
@@ -176,14 +176,20 @@ input:focus:-ms-input-placeholder {
 }
 
 .w3c-validation-result .imcms-pop-up-modal__body {
+	overflow-y: auto;
     height: 85%;
     background-color: ghostwhite;
 }
 
 .w3c-validation-result .imcms-pop-up-modal__footer {
-    padding: 15px 40px 15px 15px;
+    padding:0 !important;
     width: 100%;
     height: 10%;
+}
+
+
+.w3c-validation-result .imcms-footer__buttons{
+	padding: 0.5% 5% 0 0;
 }
 
 .w3c-validation-result .imcms-w3c-errors {
